# ines-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: List of iNES mappers.md  NES2.0.md  iNES.md
ines_parser/: __init__.py  mappers.py  parser.py
scripts/: scan_roms.py  split_rom.py
